# mikro-next

./: CHANGELOG.md  README.md  RELEASING.md  graphql.config.yaml  pyproject.toml  test.py  x.py
.dokker/integration/: docker-compose.yml
.dokker/integration/configs/: mikro_next.yaml
.github/workflows/: docker-master.yaml  integration.yaml  tests.yaml
graphql/fragments/: _views.graphql  adataset.graphql  credentials.graphql  data_roi.graphql  dataset.graphql  dim_descriptor.graphql  entity.graphql  entity_metric.graphql  entity_relation.graphql  file.graphql  fluorophore.graphql  graph.graphql  image.graphql  imagewithdata.graphql  instrument.graphql  layer.graphql  lens.graphql  linked_expression.graphql  mesh.graphql  objective.graphql  protocol_step.graphql  protocol_step_mapping.graphql  reagent.graphql  relation_metric.graphql  rendered_plot.graphql  rgbcontext.graphql  roi.graphql  scene.graphql  snapshot.graphql  specimen.graphql  stage.graphql  store.graphql  table_cell.graphql  table_row.graphql
graphql/mutations/: adataset.graphql  camera.graphql  channel.graphql  dataset.graphql  entity.graphql  entity_group.graphql  entity_kind.graphql  entity_metric.graphql  entity_relation.graphql  era.graphql  expression.graphql  file.graphql  graph.graphql  image.graphql  instrument.graphql  layer.graphql  lens.graphql  linked_expression.graphql  mesh.graphql  objective.graphql  protocol.graphql  protocol_step.graphql  protocol_step_mapping.graphql  reagent.graphql  relation_metric.graphql  render_tree.graphql  rendered_plot.graphql  rgb_context.graphql  roi.graphql  scene.graphql  snapshot.graphql  stage.graphql  table.graphql  view.graphql  viewcollection.graphql
graphql/queries/: dataset.graphql  entity.graphql  entity_relation.graphql  entity_relation_kind.graphql  file.graphql  image.graphql  images.graphql  instrument.graphql  lens.graphql  linked_expression.graphql  mesh.graphql  protocol.graphql  protocol_step.graphql  reagents.graphql  rendered_plot.graphql  rgb_context.graphql  roi.graphql  scene.graphql  snapshot.graphql  specimen.graphql  stage.graphql  table.graphql  table_cell.graphql  table_row.graphql  views.graphql
graphql/subscriptions/: files.graphql  images.graphql  roi.graphql
mikro_next/: __arkitekt__.py  __init__.py  __rekuest__.py  arkitekt.py  datalayer.py  errors.py  funcs.py  rath.py  rekuest.py  scalars.py  structures.py  traits.py
mikro_next/api/: export.py  project.json  schema.graphql  schema.py
mikro_next/contrib/fakts/: datalayer.py
mikro_next/io/: download.py  duckdb_io.py  obstore.py  types.py  upload.py
mikro_next/links/: upload.py
mikro_next/middleware/: __init__.py  base.py  upload.py
tests/: conftest.py  test_adataset.py  test_adataset_validation.py  test_array_serialization copy 2.py  test_array_serialization copy.py  test_array_serialization.py  test_dataset.py  test_duckdb_io.py  test_image.py  test_image_query.py  test_initialization.py  test_integration.py  test_obstore_storage.py  test_roi.py  test_scalars.py  test_search_pagination.py  test_stage.py  test_table.py
tests/integration/: docker-compose.yml
tests/integration/configs/: mikro_next.yaml
website/: docusaurus.config.js
website/docs/: arkitekt.md  turms.md
website/docs/reference/: app.md  datalayer.md  scalars.md  traits.md
website/docs/reference/api/: schema.md
