[project]
name = "mikro-next"
version = "2.0.0"
description = "next images for arkitekt"
authors = [{ name = "jhnnsrs", email = "jhnnsrs@gmail.com" }]
requires-python = ">=3.11"
readme = "README.md"
license = "MIT"
dependencies = [
    "zarr>=3.1",
    "xarray>=2024.11.0",
    "dask>=2024.12.1",
    "rath>=3.12",
    "numpy>=1.26; python_version ~= '3.12'",
    "websockets>=15.0.1",
    "pytest>=8.3.5",
    "fakts-next>=2",
    "numcodecs>=0.16.1",
    "obstore>=0.10.0",
]

[project.optional-dependencies]
turms = []
table = ["pyarrow>=12.0.1", "pandas>=2.2", "duckdb>=1.0"]
complete = ["pyarrow>=12.0.1", "pandas>=2.2", "duckdb>=1.0"]
# Installed inside the semantic-release Docker action so build_command has uv.
build = ["uv>=0.7.12"]


[tool.uv]
dev-dependencies =  [
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.1",
    "pytest>=8.3.5",
    "python-semantic-release>=9.21.0",
    "autoflake>=1.7.7,<2",
    "aiohttp>=3.8.3,<4",
    "black>=23.1.0,<24",
    "pytest-aiohttp>=1.0.4,<2",
    "ruff>0.11",
    "cryptography>=44.0.3",
    "pyjwt>=2.10.1",
    "dokker>=2.5",
    "pillow>=11.2.1",
    "fakts-next>=4",
    "rekuest-next>=0.12.2",
    "pyarrow>=24",
    "arkitekt-next==0.17",
    "duckdb>=1.5.3",
    "basedpyright>=1.21",
]


[tool.hatch.build.targets.sdist]
include = ["mikro_next"]

[tool.hatch.build.targets.wheel]
include = ["mikro_next"]


[tool.basedpyright]
include = ["mikro_next"]
exclude = ["**/__pycache__", "tests"]
typeCheckingMode = "standard"

[tool.ruff]
extend-select = ["ANN", "D1"]
ignore = ["ANN101"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 100

[tool.pytest.ini_options]
markers = [
    "integration: marks tests that require a deployment via testcontainers",
    "linux_only: marks tests that only run on Linux",
    "no_windows: marks tests that are skipped on Windows",
]


[[tool.pydoc-markdown.loaders]]
type = "python"
search_path = ["mikro"]

[tool.pydoc-markdown.renderer]
type = "docusaurus"
docs_base_path = "website/docs"



[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
# The semantic-release GitHub Action runs in a Docker container without uv, so
# install it first (the `build` extra). After PSR bumps the version in
# pyproject.toml, re-sync just this package's entry in uv.lock and stage it so
# the release commit carries a consistent lock. $PACKAGE_NAME is injected by PSR.
build_command = """
    python -m pip install -e '.[build]'
    uv lock --upgrade-package "$PACKAGE_NAME"
    git add uv.lock
    uv build
"""
commit_message = "chore(release): v{version} [skip ci]"

# main -> stable X.Y.Z. next -> prereleases X.Y.Z-rc.N. N.x -> maintenance.
[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.branches.next]
match = "next"
prerelease = true
prerelease_token = "rc"

# Maintenance branches (1.x, 2.x, ...) cut stable patch/minor releases for an
# older major after a new major has shipped from main.
[tool.semantic_release.branches.maintenance]
match = '^\d+\.x$'
prerelease = false

# Keep the changelog focused on user-facing changes. These patterns only filter
# what's rendered — they do not affect version bumps.
[tool.semantic_release.changelog]
exclude_commit_patterns = [
    '^chore(?:\([^)]*\))?: ',
    '^ci(?:\([^)]*\))?: ',
    '^build(?:\([^)]*\))?: ',
    '^style(?:\([^)]*\))?: ',
    '^test(?:\([^)]*\))?: ',
    '^Merge ',
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

